[Fix] Set modal chat post have overlap than meet button

--- a/frontend/web/less/desktop/chat_post.less
+++ b/frontend/web/less/desktop/chat_post.less
@@ -4,6 +4,7 @@
     overflow-y: hidden;
     width: 735px;
     margin: auto;
+    z-index: 999999;
     .modal-dialog{
         width: 725px;
         height: auto;
